# GigaChat-Cli

./: LICENSE.md  MANIFEST.in  README.md  pyproject.toml
src/gigachat_cli/: __main__.py  cli.py  core.py  interfaces.py  main.py
src/gigachat_cli/screens/: chat.py  help.py  start.py
src/gigachat_cli/styles/: chat.css  help.css  start.css
src/gigachat_cli/utils/: command.py  core.py  openfile.py
src/gigachat_cli/widgets/: banner.py  dir.py  typing.py
