[project]
name = "gigachat-cli"
version = "0.1.0"
description = "GigaChat CLI utility"
authors = [
    {name = "THEChrismoth",email = "klevindanila@ya.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "importlib-resources>=6.5.2",
    "langchain-gigachat>=0.3.12",
    "langgraph>=0.6.9",
    "questionary>=2.1.1",
    "textual>=6.2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Terminals",
]

[project.scripts]
gigachat = "gigachat_cli.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
