[project]
name = "gigachat-cli"
version = "0.1.4"
description = "GigaChat CLI utility"
authors = [
    {name = "THEChrismoth",email = "klevindanila@ya.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "importlib-resources>=6.5.2",
    "langchain-gigachat>=0.3.12",
    "regex>=2025.9.18",
    "textual>=6.2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Terminals",
]

[project.scripts]
gigachat = "gigachat_cli.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}


